@@ -1,3 +1,12 @@
+2009-02-04  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Do not show notification previews if in switcher. Fixes: NB#99892.
+
+	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Delete preview
+	windows if in switcher.
+
+	* debian/changelog: Update.
+
 2009-02-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
 	New and improved HdAppMgr for NB#98239.
